--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/twrental2 
+spring.datasource.url=jdbc:mysql://localhost:3306/TWRental
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=BOLm3rYr
+  #ÄNDRA LÖSENORD
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
