Car och admin inlagt Booking startad

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@ spring.datasource.password=BOLm3rYr
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 
+server.port=9090
+
 #kom ihåg att ändra så det är twrental och inte twrental2 när projektet börjar kännas klart.
 #ÄNDRA LÖSENORD
 
