lagt in security och fixat med de endpoints som ska finnas

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.password=BOLm3rYr
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
-
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 server.port=9090
 
 #kom ihåg att ändra så det är twrental och inte twrental2 när projektet börjar kännas klart.
