--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,23 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/TWRental
+spring.datasource.url=jdbc:mysql://localhost:3306/TWRental1
 spring.datasource.username=root
 spring.datasource.password=BOLm3rYr
 
+eureka.client.register-with-eureka= true
+eureka.client.fetch-registry= true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.instance.hostname=localhost
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 server.port=9090
+
+
+
+
+spring.application.name=TWRENTAL
+
 
 #kom ihåg att ändra så det är twrental och inte twrental2 när projektet börjar kännas klart.
 #ÄNDRA LÖSENORD
