--- a/pom.xml
+++ b/pom.xml
@@ -51,11 +51,13 @@
         <artifactId>spring-boot-starter-data-jpa</artifactId>
     </dependency>
 
+        <!--
     <dependency>
         <groupId>mysql</groupId>
         <artifactId>mysql-connector-java</artifactId>
         <version>8.0.28</version>
     </dependency>
+    -->
 
     <dependency>
         <groupId>org.hibernate</groupId>
@@ -63,10 +65,12 @@
         <version>5.6.12.Final</version>
     </dependency>
 
+        <!--
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
+        -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
@@ -81,9 +85,15 @@
             <version>3.1.3</version>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 
-
+<!--
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -95,7 +105,7 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-
+-->
     <build>
         <plugins>
             <plugin>
