--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,36 @@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/test
-spring.datasource.username=root
-spring.datasource.password=root
+#server.port=9090
 
-eureka.client.register-with-eureka= true
-eureka.client.fetch-registry= true
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-eureka.instance.hostname=localhost
-
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
-server.port=9090
-
-
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/test
+#spring.datasource.username=root
+#spring.datasource.password=root
+spring.h2.console.enabled=true
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:twrental
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 
-spring.application.name=TWRENTAL
+
+
+
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+
+#eureka.client.register-with-eureka= true
+#eureka.client.fetch-registry= true
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+#eureka.instance.hostname=localhost
+
+
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+
+#spring.application.name=TWRENTAL
 
 
 #kom ihåg att ändra så det är twrental och inte twrental2 när projektet börjar kännas klart.
